--- a/app-frontend/package.json
+++ b/app-frontend/package.json
@@ -27,6 +27,7 @@
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
+    "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
@@ -37,7 +38,8 @@
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-uuid": "^2.0.2",
-    "react-native-web": "~0.19.10"
+    "react-native-web": "~0.19.10",
+    "expo-notifications": "~0.28.15"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -47,6 +49,7 @@
     "jest": "^29.2.1",
     "jest-expo": "~51.0.3",
     "react-test-renderer": "18.2.0",
+    "tailwindcss": "^3.3.2",
     "typescript": "~5.3.3"
   },
   "private": true
